refator: fix bug
